--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.18",
+    "@tailwindcss/cli": "^4.1.18"
+  },
+  "devDependencies": {
     "tailwindcss": "^4.1.18"
   }
 }
