--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.18"
+    "@tailwindcss/cli": "^4.1.18",
+    "flowbite": "^4.0.1"
   },
   "devDependencies": {
     "tailwindcss": "^4.1.18"
